# medscanbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  boot.sh  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  dependencies.py  tasks.py
app/bot/: __init__.py  auth.py  constants.py  main.py  messages.py  polling.py  router.py
app/bot/handlers/: common.py  start.py
app/bot/services/: __init__.py  helpers.py  infoclinica_service.py  user_service.py
app/bot/ui/: __init__.py  keyboards.py
app/crud/: base.py  registered_user.py
app/db/: base.py  models.py
app/gateway/: api.py
app/providers/: ext_api.py  infoclinica_client.py  max_api.py
app/responses/: base.py
app/routing/: __init__.py
app/routing/api/: __init__.py
app/routing/api/v1/: __init__.py  bot.py  ext_api.py  info_clinical.py
app/schemas/: base.py  infoclinica.py
app/workers/: __init__.py  max_api.py
migrations/: env.py
migrations/versions/: 20260204_1437-9d6b55dae54f.py  20260204_add_clpassword_to_registered_users.py
